# sudoku

./: .gitignore  pyproject.toml
sudoku/cmd/: web.py
sudoku/web/: __init__.py  views.py
sudoku/web/static/: package-lock.json  package.json
sudoku/web/static/css/: setup.css  tailwind.config.js
sudoku/web/template/base/: base.html
sudoku/web/views/: __init__.py  game.py
