[project]
name = "sudoku"
version = "0.1.0"
description = ""
authors = [
    {name = "suthinan",email = "suthinan.rpn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry.scripts]
run-web = "sudoku.cmd.web:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "livereload (>=2.7.1,<3.0.0)"
]
